--- a/socky_server.yml
+++ b/socky_server.yml
@@ -1,5 +1,5 @@
 :port: 9090
-:debug: false
+:debug: true
 
 # :subscribe_url: http://localhost:3000/socky/subscribe
 # :unsubscribe_url: http://localhost:3000/socky/unsubscribe
