--- a/config/torquebox.yml
+++ b/config/torquebox.yml
@@ -15,6 +15,11 @@ queues:
   /queue/commands:
     durable: false
 
+services:
+  ProductionHAService:
+    singleton: true
+    sleep_time: 5
+
 #jobs:
 #  edges.processor:
 #    job:  EdgesProcessor
